# Keyboard-Trainer

./: CMakeLists.txt  README.md  createaccountdialog.cpp  createaccountdialog.h  database.cpp  database.h  logindialog.cpp  logindialog.h  main.cpp  settingswidget.cpp  settingswidget.h  window.cpp  window.h
AI json-request/: api.h
